<resources>
    <string name="app_name">Fragment and Responsiveness</string>
    <string name="dipt">This is a disease of the throat characterised by sore throat, swelling of the neck, mild fever, hoarseness, difficulty in swallowing and breathing. It is caused by a bacteria. </string>
    <string name="dit">Images Of How the disease Affect</string>
    <string name="ditw">Dear parent, Please Immunize the Child before he/she is Affected</string>
    <string name="ditq">The disease mainly affect the children. The child gets it by breathing in droplets from an infected child.</string>
    <string name="d">Diphtheria</string>
    <string name="prev">Prevention and Treatment</string>
    <string name="dpre1">1. Diphtheria can be prevented by immunising a child with combined DPT-HepB+Hib vaccine three times before the age of 1 year. This prevents Diptheria as well as 4 other diseases.</string>
    <string name="dpre2">2. Living in a well ventilated house.</string>
    <string name="dpre3">3. Covering mouth when coughing to avoid spreading the disease.</string>
    <string name="sd">How can one tell a child has Diphtheria</string>
    <string name="sd1">1. A child with Diptheria has a sore throat, mild fever, swelling of the neck, and difficulty in breathing.</string>
    <string name="sd2">2. Some children may develop weakness in one or more limbs which progresses to lameness and thinness of the affected limbs.</string>
    <string name="sd3">3. Sometimes Polio can affect the lungs and the child will stop breathing and die.</string>
    <string name="p">Poliomyelitis (Polio)</string>
    <string name="pol1">It is caused by a virus. Children get it by taking in water and food contaminated by faecal matter, containing the Polio virus.</string>
    <string name="pol">Polio is a disease which is characterised by weakness of the limbs especially of the legs. </string>
    <string name="p1">1. Polio can be prevented by immunising the child with Polio vaccine 4 times.</string>
    <string name="p2">2. Additional doses of Polio vaccine to all children below 5 years during National Immunisation Days (NIDs) will eradicate Polio disease from your community.</string>
    <string name="p3">3. Use of safe water, washing hands before handling food and after using the toilet or latrine.</string>
    <string name="p4">How can one tell a child has Polio?</string>
    <string name="p5">1. Polio is a sickness that begins with a mild cold</string>
    <string name="p6">2. Some children may develop weakness in one or more limbs which progresses to lameness and thinness of the affected limbs.</string>
    <string name="p7">3. Sometimes Polio can affect the lungs and the child will stop breathing and die.</string>
    <string name="t">Tuberculosis (TB)</string>
    <string name="t1">This is a disease caused by a bacteria, characterised by fever, cough and weight loss. Most children get the infection from infected adults. </string>
    <string name="t2">It is spread through air especially where one is near an infected person.</string>
    <string name="t3">1. TB can be prevented by immunising a child with BCG vaccine at birth.</string>
    <string name="t4">2. Proper feeding (balanced diet).</string>
    <string name="t5">3. Children should not mix with infected people.</string>
    <string name="t6">4. Live in well ventilated houses.</string>
    <string name="t7">5. Cover your mouth when coughing to avoid spreading the disease.</string>
    <string name="t8">How can one tell a child has TB?</string>
    <string name="t9">1. A child has prolonged cough of more than 2 weeks</string>
    <string name="t10">2. A child has no appetite and loses weight.</string>
    <string name="t11">3. Sometimes Polio can affect the lungs and the child will stop breathing and die.</string>
    <string name="h">Hepatitis B (liver disease)</string>
    <string name="h1">Hepatitis B is a serious disease of the liver and is caused by the Hepatitis B virus (HBV) which usually exists in the blood and bodily fluids of the infected person. Hepatitis B virus causes chronic infections that lead to liver damage (cirrhosis), liver cancer and death.</string>
    <string name="h2">There is no cure for Hepatitis B Virus illnesses. Children get it through cuts, casual contact and from their mothers at birth. Hepatitis B is also spread through blood transfusions, unsafe injections, and sexual contact (adults) with an infected person.</string>
    <string name="h3">1. Through immunising all children below one year 3 times with combined DPTHepB+Hib vaccine. Three injections prevent Hepatitis B and 4 other diseases.</string>
    <string name="h4">2. Immunisation in childhood protects the child from Hepatitis B for at least 10 years.</string>
    <string name="h5">How can one tell a child has Hepatitis B (Hep B)?</string>
    <string name="h6">1. In children, no signs or symptoms are usually seen, but infected children remain infected for many years and can spread the infection to others.</string>
    <string name="h7">2. Usually, the effects of Hepatitis B appear during adulthood as yellow skin and eyes, weight loss, vomiting and weakness.Over time, Hepatitis causes coma and death. Many people become infected with Hepatitis B during childhood, and carry the disease into adulthood.</string>
    <string name="h8">IMMUNIZABLE DISEASES</string>
    <string name="h9">The following are some of the immunizable diseases</string>
    <string name="h10"></string>
    <string name="h11"></string>

</resources>
