<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tindyebwa.fragmentsandrespons.Diphtheriap">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/d"
        android:textStyle="bold"
        android:textColor="#572f4c"
        android:id="@+id/textView"
        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dipt"
        android:id="@+id/ta"
        android:layout_marginRight="25dp"
        android:textColor="#010101"
        android:textSize="18dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ditq"
            android:id="@+id/dit"
            android:layout_marginRight="25dp"
            android:textColor="#010101"
            android:textSize="18dp"
            android:textStyle="italic"
            android:layout_below="@+id/ta"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/dit"
            android:id="@+id/dit1"
            android:layout_marginRight="25dp"
            android:textColor="#010101"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_below="@+id/dit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ta"
            android:background="@drawable/dip" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="145dp"
            android:background="@drawable/dip1"
            android:id="@+id/imageView7"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ditw"
            android:id="@+id/d"
            android:layout_marginRight="25dp"
            android:textColor="#010101"
            android:textSize="18dp"
            android:textStyle="italic"
            android:layout_below="@+id/ta"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </LinearLayout>

    </ScrollView>

</RelativeLayout>
